tests/lean/283.lean.expected.out
283.lean:1:24-1:25: error: Application type mismatch: In the appplication
  f f
the final argument
  f
has type
  ?m : Sort ?u
but is expected to have type
  optParam (Sort ?u) t : Type ?u
